--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,9 @@
 API_BASE_URL=/api/v1
+
+#SECURE API
+SECIRE_API=rtyhrtvdffgrdge
+
+#MONGODB CONFIG
+MONGODB_USER_NAME=sajib562341
+MONGODB_PASSWORD=zxsF5EjZfCgCqc65
+DATABASE_NAME=ecommerce
