--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch index.js"
+    "start": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongobd": "^0.0.1-security.0",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "nodemon": "^3.1.0",
+    "otp-generator": "^4.0.1"
   }
 }
